# K-Adapter

./: .envrc  .gitignore  fac-adapter-cosine.py  fac-adapter-custom.py  fac-adapter-linear.py  fac-adapter-regression.py  fac-adapter.py  lin-adapter.py  mlm-adapter.py  mlm_adapter.py  pyproject.toml  run_emb_eval.sh  run_finetune_ner_adapter.sh  run_finetune_openentity_adapter.sh  run_pretrain_fac-adapter.sh  run_pretrain_lin-adapter.sh  run_pretrain_mlm-adapter.sh  setup.cfg  tokenize_ner_sentences.py  utils_glue.py  yaml_preprocessing.py
evaluation/: models.py  ner_embedding_evaluation.py
evaluation/data/: data.csv
examples/: embedding_evaluation.py  run_finetune_ner.py  run_finetune_openentity_adapter.py  utils_glue.py
outputs/embedding_eval/: results.csv
pyRDF2vec/: train_rdf2vec.py
scripts/: adapt_ner_data.ipynb  clean_T_REx.py  create_data_from_taxo.ipynb  create_subdataset-relation-classification.ipynb
tensorboard/: base.py
