[tool.poetry]
name = "K-Adapter"
# The version listed here is just a placeholder, the real package version is derived from the github release tag
# When the package is installed from gemfury, the real version is used
version = "0.1.0-dev"

description = "Python library related to query semantics"
authors = [
    "Etienne Soulard-Geoffrion <etienne.soulard-geoffrion@clinia.com>",
    "Daniel Buades Marcos <daniel.buades@clinia.com>",
    "Alexandre Duperré <alexandre.duperre@clinia.com>"
]

[tool.poetry.dependencies]
aiobotocore = {version = "^1.3.0", extras = ["boto3"]}
s3fs = "^2021.4.0"
python = "^3.8.6,<3.9"
Unidecode = "^1.2.0"
PyYAML = "^5.4.1"
pandas = "^1.2.4"
bioc = "^1.3.6"

torch = "^1.3.1"
transformers = "^4.5.1"
rapidfuzz = "^1.4.1"
tensorboard = "^2.5.0"
scikit-learn = "^0.22"
sentencepiece = "^0.1.96"
nltk = "^3.6.2"
pexpect = "^4.8.0"
sacremoses = "^0.0.45"
regex = "^2021.7.6"
requests = "^2.26.0"
tensorboardX = "^2.4"


[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.11.1"
isort = "^5.8.0"
black = "^21.5b0"
flake8 = "^3.9.1"
pre-commit = "^2.12.1"
pre-commit-hooks = "^3.4.0"
pynvml = "^8.0.4"
search-utils = { git = "https://github.com/clinia/search-utils.git", branch = "SEAR-849" }

[[tool.poetry.source]]
name = "clinia"
url = "https://pypi.fury.io/clinia"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


## Imports and formatting
[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
line-length = 120
